
// Copyright (c) RoochNetwork
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package moveoss;

import "google/protobuf/timestamp.proto";

message Transaction {
    google.protobuf.Timestamp timestamp = 1;
    uint64 version = 2;
    TransactionInfo info = 3;
    uint64 epoch = 4;
    uint64 block_height = 5;
  
    enum TransactionType {
      TRANSACTION_TYPE_UNSPECIFIED = 0;
      TRANSACTION_TYPE_GENESIS = 1;
      TRANSACTION_TYPE_BLOCK_METADATA = 2;
      TRANSACTION_TYPE_STATE_CHECKPOINT = 3;
      TRANSACTION_TYPE_USER = 4;
    }
  
    TransactionType type = 6;
  
    oneof txn_data {
      BlockMetadataTransaction block_metadata = 7;
      GenesisTransaction genesis = 8;
      StateCheckpointTransaction state_checkpoint = 9;
      UserTransaction user = 10;
    }
}
  
message BlockMetadataTransaction {
    string id = 1;
    uint64 round = 2;
    repeated Event events = 3;
    bytes previous_block_votes_bitvec = 4;
    string proposer = 5;
    repeated uint32 failed_proposer_indices = 6;
}
  
message GenesisTransaction {
    WriteSet payload = 1;
    repeated Event events = 2;
}
  
message StateCheckpointTransaction {
}
  
message UserTransaction {
    UserTransactionRequest request = 1;
    repeated Event events = 2;
}
  
message Event {
    EventKey key = 1;
    uint64 sequence_number = 2;
    MoveType type = 3;
    string type_str = 5;
    string data = 4;
}
  
message TransactionInfo {
    bytes hash = 1;
    bytes state_change_hash = 2;
    bytes event_root_hash = 3;
    optional bytes state_checkpoint_hash = 4;
    uint64 gas_used = 5;
    bool success = 6;
    string vm_status = 7;
    bytes accumulator_root_hash = 8;
    repeated WriteSetChange changes = 9;
}
  
message EventKey {
    uint64 creation_number = 1;
    string account_address = 2;
}
  
message UserTransactionRequest {
    string sender = 1;
    uint64 sequence_number = 2;
    uint64 max_gas_amount = 3;
    uint64 gas_unit_price = 4;
    google.protobuf.Timestamp expiration_timestamp_secs = 5;
    TransactionPayload payload = 6;
    Signature signature = 7;
}
  
message WriteSet {
  
    enum WriteSetType {
      WRITE_SET_TYPE_UNSPECIFIED = 0;
      WRITE_SET_TYPE_SCRIPT_WRITE_SET = 1;
      WRITE_SET_TYPE_DIRECT_WRITE_SET = 2;
    }
  
    WriteSetType write_set_type = 1;
    oneof write_set {
      ScriptWriteSet script_write_set = 2;
      DirectWriteSet direct_write_set = 3;
    }
}
  
message ScriptWriteSet {
    string execute_as = 1;
    ScriptPayload script = 2;
}
  
message DirectWriteSet {
    repeated WriteSetChange write_set_change = 1;
    repeated Event events = 2;
}
  
message WriteSetChange {
  
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_DELETE_MODULE = 1;
      TYPE_DELETE_RESOURCE = 2;
      TYPE_DELETE_TABLE_ITEM = 3;
      TYPE_WRITE_MODULE = 4;
      TYPE_WRITE_RESOURCE = 5;
      TYPE_WRITE_TABLE_ITEM = 6;
    }
  
    Type type = 1;
  
    oneof change {
      DeleteModule delete_module = 2;
      DeleteResource delete_resource = 3;
      DeleteTableItem delete_table_item = 4;
      WriteModule write_module = 5;
      WriteResource write_resource = 6;
      WriteTableItem write_table_item = 7;
    }
}
  
message DeleteModule {
    string address = 1;
    bytes state_key_hash = 2;
    MoveModuleId module = 3;
}
  
message DeleteResource {
    string address = 1;
    bytes state_key_hash = 2;
    MoveStructTag type = 3;
    string type_str = 4;
}
  
message DeleteTableItem {
    bytes state_key_hash = 1;
    string handle = 2;
    string key = 3;
    DeleteTableData data = 4;
}
  
message DeleteTableData {
    string key = 1;
    string key_type = 2;
}
  
message WriteModule {
    string address = 1;
    bytes state_key_hash = 2;
    MoveModuleBytecode data = 3;
}
  
message WriteResource {
    string address = 1;
    bytes state_key_hash = 2;
    MoveStructTag type = 3;
    string type_str = 4;
    string data = 5;
}
  
message WriteTableData {
    string key = 1;
    string key_type = 2;
    string value = 3;
    string value_type = 4;
}
  
 message WriteTableItem {
    bytes state_key_hash = 1;
    string handle = 2;
    string key = 3;
    WriteTableData data = 4;
}
  
message TransactionPayload {
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_ENTRY_FUNCTION_PAYLOAD = 1;
      TYPE_SCRIPT_PAYLOAD = 2;
      TYPE_MODULE_BUNDLE_PAYLOAD = 3;
      TYPE_WRITE_SET_PAYLOAD = 4;
      TYPE_MULTISIG_PAYLOAD = 5;
    }
  
    Type type = 1;
  
    oneof payload {
      EntryFunctionPayload entry_function_payload = 2;
      ScriptPayload script_payload = 3;
      ModuleBundlePayload module_bundle_payload = 4;
      WriteSetPayload write_set_payload = 5;
      MultisigPayload multisig_payload = 6;
    }
}
  
  message EntryFunctionPayload {
    EntryFunctionId function = 1;
    repeated MoveType type_arguments = 2;
    repeated string arguments = 3;
    string entry_function_id_str = 4;
  }
  
  message MoveScriptBytecode {
    bytes bytecode = 1;
    MoveFunction abi = 2;
  }
  
  message ScriptPayload {
    MoveScriptBytecode code = 1;
    repeated MoveType type_arguments = 2;
    repeated string arguments = 3;
  }
  
  message MultisigPayload {
    string multisig_address = 1;
    optional MultisigTransactionPayload transaction_payload = 2;
  }
  
  message MultisigTransactionPayload {
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_ENTRY_FUNCTION_PAYLOAD = 1;
    }
  
    Type type = 1;
  
    oneof payload {
      EntryFunctionPayload entry_function_payload = 2;
    }
  }
  
  message ModuleBundlePayload {
    repeated MoveModuleBytecode modules = 1;
  }
  
  message MoveModuleBytecode {
    bytes bytecode = 1;
    MoveModule abi = 2;
  }
  
  message MoveModule {
    string address = 1;
    string name = 2;
    repeated MoveModuleId friends = 3;
    repeated MoveFunction exposed_functions = 4;
    repeated MoveStruct structs = 5;
  }
  message MoveFunction {
    enum Visibility {
      VISIBILITY_UNSPECIFIED = 0;
      VISIBILITY_PRIVATE = 1;
      VISIBILITY_PUBLIC = 2;
      VISIBILITY_FRIEND = 3;
    }
    string name = 1;
    MoveFunction.Visibility visibility = 2;
    bool is_entry = 3;
    repeated MoveFunctionGenericTypeParam generic_type_params = 4;
    repeated MoveType params = 5;
    repeated MoveType return = 6;
  }
  
  message MoveStruct {
    string name = 1;
    bool is_native = 2;
    repeated MoveAbility abilities = 3;
    repeated MoveStructGenericTypeParam generic_type_params = 4;
    repeated MoveStructField fields = 5;
  }
  
  message MoveStructGenericTypeParam{
    repeated MoveAbility constraints = 1;
    bool is_phantom = 2;
  }
  
  message MoveStructField {
    string name = 1;
    MoveType type = 2;
  }
  
  message MoveFunctionGenericTypeParam {
    repeated MoveAbility constraints = 1;
  }
  
  enum MoveTypes {
    MOVE_TYPES_UNSPECIFIED = 0;
    MOVE_TYPES_BOOL = 1;
    MOVE_TYPES_U8 = 2;
    MOVE_TYPES_U16 = 12;
    MOVE_TYPES_U32 = 13;
    MOVE_TYPES_U64 = 3;
    MOVE_TYPES_U128 = 4;
    MOVE_TYPES_U256 = 14;
    MOVE_TYPES_ADDRESS = 5;
    MOVE_TYPES_SIGNER = 6;
    MOVE_TYPES_VECTOR = 7; // `{ items: Box<MoveType> }`,
    MOVE_TYPES_STRUCT = 8; // `(MoveStructTag)`,
    MOVE_TYPES_GENERIC_TYPE_PARAM = 9; // `{ index: u16 }``,
    MOVE_TYPES_REFERENCE = 10; // `{ mutable: bool, to: Box<MoveType> }`,
    MOVE_TYPES_UNPARSABLE = 11; // `(String)`,
  }
  
  message MoveType{
  
    message ReferenceType {
      bool mutable = 1;
      MoveType to = 2;
    }
  
    MoveTypes type = 1;
    oneof content {
      MoveType vector = 3;
      MoveStructTag struct = 4;
      uint32 generic_type_param_index = 5;
      ReferenceType reference = 6;
      string unparsable = 7;
    }
  }
  
  enum MoveAbility {
    MOVE_ABILITY_UNSPECIFIED = 0;
    MOVE_ABILITY_COPY = 1;
    MOVE_ABILITY_DROP = 2;
    MOVE_ABILITY_STORE = 3;
    MOVE_ABILITY_KEY = 4;
  }
  
  message WriteSetPayload {
    WriteSet write_set = 1;
  }
  
  message EntryFunctionId {
    MoveModuleId module = 1;
    string name = 2;
  }
  
  message MoveModuleId {
    string address = 1;
    string name = 2;
  }
  
  message MoveStructTag {
    string address = 1;
    string module = 2;
    string name = 3;
    repeated MoveType generic_type_params = 4;
  }
  
  message Signature {
  
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_ED25519 = 1;
      TYPE_MULTI_ED25519 = 2;
      TYPE_MULTI_AGENT = 3;
    }
  
    Type type = 1;
    oneof signature {
      Ed25519Signature ed25519 = 2;
      MultiEd25519Signature multi_ed25519 = 3;
      MultiAgentSignature multi_agent = 4;
    }
  }
  
  message Ed25519Signature {
    bytes public_key = 1;
    bytes signature = 2;
  }
  
  message MultiEd25519Signature {
    repeated bytes public_keys = 1;
    repeated bytes signatures = 2;
    uint32 threshold = 3;
    repeated uint32 public_key_indices = 4;
  }
  
  message MultiAgentSignature {
    AccountSignature sender = 1;
    repeated string secondary_signer_addresses = 2;
    repeated AccountSignature secondary_signers = 3;
  }
  
  message AccountSignature {
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_ED25519 = 1;
      TYPE_MULTI_ED25519 = 2;
    }
  
    Type type = 1;
    oneof signature {
      Ed25519Signature ed25519 = 2;
      MultiEd25519Signature multi_ed25519 = 3;
    }
  }

message TransactoinResponse {
    string confirmation = 1; 
}

// for tests
message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
    google.protobuf.Timestamp timestamp = 2;
}

service OsService {

    rpc echo(HelloRequest) returns (HelloResponse);

    // Add other service
}


